2009-03-24  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/Makefile.am:
	* docs/reference/pygio-classes.xml:
	* docs/reference/pygio-appinfo.xml:
	* docs/reference/pygio-constants.xml:
	* docs/reference/pygio-fileattributeinfo.xml: Add gio.AppInfo and
	gio.FileAttributeInfo in docs.

2009-03-22  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/Makefile.am:
	* docs/reference/pygio-classes.xml:
	* docs/reference/pygio-fileicon.xml:
	* docs/reference/pygio-fileenumerator.xml: Add gio.FileIcon and
	gio.FileEnumerator in docs.

	* docs/reference/pygio-constants.xml: Add gio.ERROR_* constants.

	* docs/reference/pygio-applaunchcontext.xml:
	* docs/reference/pygio-emblemedicon.xml: Fix a couple of typos.

2009-03-09  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/Makefile.am:
	* docs/reference/pygio-classes.xml:
	* docs/reference/pygio-emblemedicon.xml:
	* docs/reference/pygio-icon.xml:
	* docs/reference/pygio-emblem.xml: Add gio.EmblemedIcon and
	gio.Icon in docs, fix a couple of typos.

2009-03-09  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/Makefile.am:
	* docs/reference/pygio-classes.xml:
	* docs/reference/pygio-constants.xml:
	* docs/reference/pygio-emblem.xml: Add gio.Emblem and constants in docs.

2009-03-08  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/reference/pygio-classes.xml:
	* docs/reference/pygio-cancellable.xml: Complete cancellable docs.

2009-03-08  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/Makefile.am:
	* docs/reference/pygio-classes.xml:
	* docs/reference/pygobject-ref.xml:
	* docs/reference/pygio-applaunchcontext.xml:
	* docs/reference/pygio-cancellable.xml: Add few gio classes.

2009-03-08  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gio.defs: add g_cancellable_make_pollfd

2009-03-08  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/Makefile.am:
	* docs/reference/pyglib-classes.xml
	* docs/reference/pygobject-ref.xml
	* docs/reference/pygobject-classes.xml: Split glib and gobject
	doc sections.